posiGen_FullsendBox/src/objects/Business_Process__c.object
<CustomObject>
    <fields>
        <fullName>Cycle__c</fullName>
        <description>How often is this process ran?  If as-needed, then it&apos;s Event Driven.</description>
        <inlineHelpText>How often is this process ran?  If as-needed, then it&apos;s Event Driven.</inlineHelpText>
        <label>Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biweekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Driven</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semiannually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semimonthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Business Processes</relationshipLabel>
        <relationshipName>Business_Processes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Dept_OBS__c</fullName>
        <formula>Department__r.OBS__c</formula>
        <label>Dept OBS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Documentation_Status_Notes__c</fullName>
        <label>Documentation Status Notes</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Documentation_Status__c</fullName>
        <label>Documentation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Requirements Gathering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Process Mapping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <description>Sequence Number of this Process within a Department.</description>
        <inlineHelpText>Sequence Number of this Process within a Department.</inlineHelpText>
        <label>Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Attachments__c</fullName>
        <label># of Attachments</label>
        <summaryForeignKey>Business_Process_Attachment__c.Business_Process__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OBS__c</fullName>
        <formula>Dept_OBS__c &amp;&quot;.&quot; &amp;   TEXT(Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OBS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Owning_Process__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This position at the Company owns the Process - that doesn&apos;t mean that steps within the process aren&apos;t conducted by someone else.</description>
        <inlineHelpText>This position at the Company owns the Process - that doesn&apos;t mean that steps within the process aren&apos;t conducted by someone else.</inlineHelpText>
        <label>Position Owning Process</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Department__c</field>
                <operation>equals</operation>
                <valueField>Position__c.Department__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Business Processes</relationshipLabel>
        <relationshipName>Business_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Business Process</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBS__c</columns>
        <columns>Number__c</columns>
        <columns>NAME</columns>
        <columns>Cycle__c</columns>
        <columns>Documentation_Status__c</columns>
        <columns>Number_of_Attachments__c</columns>
        <columns>Position_Owning_Process__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Business Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Processes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>